# kmmProject

./: settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/: CMakeLists.txt  config.cpp  native-lib.cpp
composeApp/src/androidMain/kotlin/com/sample/project/: ApplicationClass.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/com/sample/project/di/: HttpClientEngineProvider.android.kt
composeApp/src/androidMain/kotlin/com/sample/project/utils/: ConfigProvider.android.kt  NativeConfig.kt
composeApp/src/commonMain/kotlin/com/sample/project/: SampleApplication.kt
composeApp/src/commonMain/kotlin/com/sample/project/core/: ApiResult.kt  KoinHolder.kt  NavigationKeys.kt  (+3 more)
composeApp/src/iosMain/kotlin/com/sample/project/: IosBridge.kt  MainViewController.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
nativeConfig/: build.gradle.kts
nativeConfig/src/androidMain/cpp/: CMakeLists.txt  jni_bridge.cpp
nativeConfig/src/androidMain/kotlin/com/sample/nativeconfig/: NativeConfigJni.kt  NativeConfigKeys.android.kt
nativeConfig/src/commonMain/kotlin/com/sample/nativeconfig/: NativeConfigKeys.kt
nativeConfig/src/iosMain/kotlin/com/sample/nativeconfig/: NativeConfigKeys.ios.kt
nativeConfig/src/nativeInterop/c/: config_keys.c
nativeConfig/src/nativeInterop/cinterop/: config_keys.def
nativeConfig/src/nativeInterop/include/: config_keys.h
network/: build.gradle.kts
(+50 files in other folders)
